--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -2,16 +2,19 @@
 <RelativeLayout style="@style/linear"
                 xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ProgressBar
-        android:id="@+id/loading"
-        style="@style/progressbar"
-        android:layout_centerInParent="true"
-        android:layout_alignParentRight="false"
-        android:visibility="gone"/>
+    <RelativeLayout
+        android:id="@+id/root"
+        style="@style/root">
+        <ProgressBar
+            android:id="@+id/loading"
+            style="@style/progressbar"
+            android:layout_alignParentRight="false"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
-    <WebView
-        android:id="@+id/webView"
-        style="@style/root"/>
-
-    <include layout="@layout/layout_stub_offline"/>
+        <WebView
+            android:id="@+id/webView"
+            style="@style/root"/>
+    </RelativeLayout>
+    <include layout="@layout/layout_internet_connection_lost"/>
 </RelativeLayout>
