--- a/app/src/main/res/layout/fragment_friend_tab.xml
+++ b/app/src/main/res/layout/fragment_friend_tab.xml
@@ -38,6 +38,27 @@
                 android:background="@color/white">
 
             </android.support.v4.view.ViewPager>
+
+            <LinearLayout
+                android:id="@+id/friend_info_layout"
+                android:visibility="gone"
+                style="@style/item"
+                android:background="@color/actionbar_background"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/pd_xxlarge">
+
+                <include
+                    android:id="@+id/friend_avatar"
+                    layout="@layout/layout_user_avatar"/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/friend_invisible_title"
+                    style="@style/text.small.white"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/friend_profile_invisible"/>
+            </LinearLayout>
+
         </LinearLayout>
 
         <ProgressBar
