--- a/elkag/src/main/res/layout/item_dynamics_our_app.xml
+++ b/elkag/src/main/res/layout/item_dynamics_our_app.xml
@@ -3,37 +3,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.android.volley2.toolbox.NetworkImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="3dp"
-        android:src="@drawable/elk_default_image" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/image"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="fill_parent"
+    <RelativeLayout
+        android:id="@+id/container"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.android.volley2.toolbox.NetworkImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="ajklsdf"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:src="@drawable/elk_default_image" />
 
-        <TextView
-            android:id="@+id/tvBody"
-            style="?dynamicTextBodyStyle"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="sdfsdff" />
-    </LinearLayout>
+            android:layout_toRightOf="@+id/image"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                android:text="ajklsdf"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvBody"
+                style="?dynamicTextBodyStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="10dp"
+                android:text="sdfsdff" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_below="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:alpha="0.3"
+        android:layout_marginTop="2dp"
+        android:src="@color/elk_separatorGreyColor"
+        android:scaleType="fitXY" />
 </RelativeLayout>
