--- a/app/src/main/res/layout/fragment_poll.xml
+++ b/app/src/main/res/layout/fragment_poll.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newpoll.vm.PollFragmentVM"/>
+            type="ru.mos.polls.poll.vm.PollFragmentVM"/>
     </data>
 
     <LinearLayout
