--- a/app/src/main/res/layout/layout_support.xml
+++ b/app/src/main/res/layout/layout_support.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="ru.mos.polls.newsupport.vm.SupportFragmentVM" />
+            type="ru.mos.polls.support.vm.SupportFragmentVM" />
     </data>
 
     <RelativeLayout
