удаление старой setting переименование  newsetting в setting

--- a/app/src/main/res/layout/layout_settings.xml
+++ b/app/src/main/res/layout/layout_settings.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newsettings.vm.SettingsFragmentVM" />
+            type="ru.mos.polls.settings.vm.SettingsFragmentVM" />
     </data>
 
 
