--- a/app/src/main/res/layout/layout_innovation_content.xml
+++ b/app/src/main/res/layout/layout_innovation_content.xml
@@ -43,7 +43,7 @@
             android:text="@string/title_your_mark"
             />
 
-        <ru.mos.polls.innovation.view.ChartsView
+        <ru.mos.polls.innovations.ui.ChartsView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/chartsView"
             android:layout_width="match_parent"
