удаление старой about переименование  newabout в about

--- a/app/src/main/res/layout/layout_about_app.xml
+++ b/app/src/main/res/layout/layout_about_app.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newabout.vm.AboutAppFragmentVM" />
+            type="ru.mos.polls.about.vm.AboutAppFragmentVM" />
     </data>
 
     <RelativeLayout style="@style/root">
