--- a/app/src/main/res/layout/fragment_profile_quest.xml
+++ b/app/src/main/res/layout/fragment_profile_quest.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/edit_user_flat_card"
-            style="@style/wrap"
-            android:layout_below="@+id/edit_user_family_card"
-            android:layout_marginTop="@dimen/pd_normal">
+        <LinearLayout style="@style/linear">
 
-            <LinearLayout
-                style="@style/linear"
-                android:padding="@dimen/pd_xxsmall">
+            <include layout="@layout/toolbar" />
 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/edit_flat_registration"
-                    style="@style/edit_profile"
-                    android:hint="Адрес регистрации" />
+            <android.support.v7.widget.CardView
+                android:id="@+id/edit_user_flat_card"
+                style="@style/wrap"
+                android:layout_below="@+id/edit_user_family_card"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="56dp">
 
-                <include layout="@layout/ag_separator" />
+                <LinearLayout
+                    style="@style/linear"
+                    android:padding="@dimen/pd_xxsmall">
 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/edit_flat_residence"
-                    style="@style/edit_profile"
-                    android:hint="Адрес проживания" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/edit_flat_registration"
+                        style="@style/edit_profile"
+                        android:hint="Адрес регистрации" />
+
+                    <include layout="@layout/ag_separator" />
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/edit_flat_residence"
+                        style="@style/edit_profile"
+                        android:hint="Адрес проживания" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
