--- a/app/src/main/res/layout/layout_one_expert.xml
+++ b/app/src/main/res/layout/layout_one_expert.xml
@@ -8,6 +8,7 @@
 
     <RelativeLayout
         style="@style/wrap"
+        android:layout_marginLeft="@dimen/pd_xxsmall"
         android:layout_gravity="center">
 
         <ProgressBar
