--- a/app/src/main/res/layout/layout_user_avatar_panel.xml
+++ b/app/src/main/res/layout/layout_user_avatar_panel.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser"/>
+            type="ru.mos.elk.profile.AgUser" />
 
         <variable
             name="clickListener"
-            type="ru.mos.polls.profile.vm.AvatarPanelClickListener"/>
+            type="ru.mos.polls.profile.vm.AvatarPanelClickListener" />
     </data>
 
     <LinearLayout
         style="@style/item"
-        android:paddingTop="@dimen/pd_xxlarge"
         android:background="@color/actionbar_background"
-        android:gravity="center">
+        android:gravity="center"
+        android:layerType="hardware"
+        android:paddingTop="@dimen/pd_xxlarge">
 
         <ImageView
             android:id="@+id/agUser_camera"
@@ -26,17 +27,18 @@
             android:clickable="true"
             android:onClick="@{()->clickListener.makePhoto()}"
             android:padding="@dimen/pd_xxsmall"
-            app:srcCompat="@drawable/ic_photo_camera"/>
+            app:srcCompat="@drawable/ic_photo_camera" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/agUser_image"
             android:layout_width="@dimen/vs_xnormal"
             android:layout_height="@dimen/vs_xnormal"
             android:layout_weight="1"
+            android:layerType="software"
             android:src="@drawable/unlogin2"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/agUser_edit"
@@ -45,7 +47,7 @@
             android:clickable="true"
             android:onClick="@{()->clickListener.editUserInfo()}"
             android:padding="@dimen/pd_xxsmall"
-            app:srcCompat="@drawable/ic_new_file"/>
+            app:srcCompat="@drawable/ic_new_file" />
 
     </LinearLayout>
 </layout>
