--- a/app/src/main/res/layout/layout_innovation_title.xml
+++ b/app/src/main/res/layout/layout_innovation_title.xml
@@ -36,6 +36,7 @@
 
             <WebView
                 style="@style/item"
+                android:layout_width="fill_parent"
                 android:id="@+id/fullContainer"
                 android:hardwareAccelerated="true"
                 android:visibility="gone" />
