--- a/app/src/main/res/layout/fragment_user_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_user_tab_profile.xml
@@ -82,6 +82,7 @@
                             android:checked="true"
                             android:textOff="@string/empty"
                             android:textOn="@string/empty"
+                            android:visibility="gone"
                             android:thumbTextPadding="@dimen/pd_xlarge"/>
                     </RelativeLayout>
                 </LinearLayout>
