--- a/app/src/main/res/layout/fragment_new_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_new_edit_profile.xml
@@ -199,6 +199,7 @@
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
+                        android:visibility="gone"
                         android:id="@+id/edit_user_private_property"
                         style="@style/linear"
                         android:layout_below="@+id/edit_user_work_card"
