--- a/app/src/main/res/layout/fragment_pgu_auth.xml
+++ b/app/src/main/res/layout/fragment_pgu_auth.xml
@@ -10,11 +10,12 @@
             android:id="@+id/authContainer"
             style="@style/root"
             android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="@dimen/pd_normal">
 
             <include
                 android:id="@+id/pgu_state_layer"
-                layout="@layout/layout_pgu_auth_header"/>
+                layout="@layout/layout_pgu_auth_header" />
 
             <TextView
                 android:id="@+id/pguTitle"
@@ -22,39 +23,37 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/pgu_state_layer"
-                android:layout_marginTop="22dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:padding="@dimen/pd_xsmall"
-                android:text="@string/pgu_auth_message"/>
+                android:paddingTop="@dimen/pd_normal"
+                android:text="@string/pgu_auth_message" />
 
 
             <Button
                 android:id="@+id/pgu_connect_btn"
-                style="@style/button.centered"
-                android:layout_centerInParent="false"
-                android:layout_centerHorizontal="true"
+                style="@style/button.centered.action"
                 android:layout_below="@id/pguTitle"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/pd_xlarge"
                 android:layout_marginBottom="@dimen/pd_xxxlarge"
-                android:minWidth="@dimen/vs_xxlarge"
-                android:text="Связать профили"
-                android:textSize="@dimen/ts_normal"/>
+                android:layout_marginTop="@dimen/pd_normal"
+                android:enabled="true"
+                android:minWidth="160dp"
+                android:text="Связать профили" />
 
             <TextView
                 android:id="@+id/rebind"
                 style="@style/text.small.green"
                 android:layout_below="@id/pguTitle"
                 android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/pd_xxxlarge"
                 android:layout_marginTop="@dimen/pd_xsmall"
                 android:minWidth="@dimen/vs_xxxlarge"
                 android:padding="@dimen/pd_xsmall"
                 android:paddingBottom="@dimen/pd_xxsmall"
                 android:paddingTop="@dimen/pd_xxsmall"
-                android:layout_marginBottom="@dimen/pd_xxxlarge"
                 android:text="@string/pgu_rebind"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <LinearLayout
                 style="@style/wrap"
@@ -63,7 +62,7 @@
 
                 <include
                     android:id="@+id/help"
-                    layout="@layout/layout_help"/>
+                    layout="@layout/layout_help" />
             </LinearLayout>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
