--- a/app/src/main/res/layout/fragment_wizard_flat.xml
+++ b/app/src/main/res/layout/fragment_wizard_flat.xml
@@ -22,7 +22,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/social_status"
                         style="@style/edit_profile.input"
-                        android:layout_marginBottom="@dimen/pd_xsmall"
+                        android:layout_marginBottom="@dimen/pd_xxsmall"
                         android:focusable="false"
                         android:hint="@string/title_social_status"
                         android:visibility="gone"/>
@@ -30,7 +30,7 @@
 
                 <android.support.v7.widget.AppCompatTextView
                     android:paddingLeft="@dimen/pd_normal"
-                    android:paddingTop="@dimen/pd_normal"
+                    android:paddingTop="@dimen/pd_xsmall"
                     android:paddingRight="@dimen/pd_normal"
                     android:id="@+id/wizard_flat_title"
                     style="@style/text.normal.black"
