--- a/app/src/main/res/layout/layout_mos_news.xml
+++ b/app/src/main/res/layout/layout_mos_news.xml
@@ -4,7 +4,8 @@
     android:id="@+id/mosNews"
     style="@style/item"
     app:cardElevation="@dimen/pd_xsmall"
-    android:layout_margin="@dimen/pd_small">
+    android:layout_marginBottom="@dimen/pd_xsmall"
+    android:layout_marginTop="@dimen/pd_xsmall">
 
 <LinearLayout
         android:layout_width="match_parent"
@@ -24,6 +25,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/news_government_moscow"
+            android:layout_marginRight="@dimen/pd_xxsmall"
             android:textColor="@color/red" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
