--- a/app/src/main/res/layout/layout_flat_warning_block.xml
+++ b/app/src/main/res/layout/layout_flat_warning_block.xml
@@ -4,6 +4,7 @@
     <RelativeLayout
         android:id="@+id/warningContainer"
         style="@style/item"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/pd_xlarge">
 
         <ImageView
