--- a/app/src/main/res/layout/fragment_quests.xml
+++ b/app/src/main/res/layout/fragment_quests.xml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/root"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/root">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/ptrLayout"
         style="@style/root"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_marginTop="-28dp">
 
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/ptrLayout"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
             style="@style/root"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="false"
-            android:layout_marginTop="-18dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:scrollbars="vertical" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/list"
-                style="@style/root"
-                android:scrollbars="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
         android:id="@id/empty"
@@ -34,7 +23,7 @@
         <TextView
             style="@style/text.large.gray"
             android:padding="@dimen/pd_xsmall"
-            android:text="@string/empty_quest_list"/>
+            android:text="@string/empty_quest_list" />
         <!--Социальные сети-->
         <LinearLayout
             style="@style/item.linear"
@@ -45,9 +34,9 @@
                 android:id="@+id/subscribe"
                 style="@style/basicIcon"
                 android:drawableLeft="@drawable/rss"
-                android:text="@string/do_subscribe"/>
+                android:text="@string/do_subscribe" />
         </LinearLayout>
     </LinearLayout>
 
-    <include layout="@layout/layout_internet_connection_lost"/>
+    <include layout="@layout/layout_internet_connection_lost" />
 </RelativeLayout>
