AG-1103 - доделаны экраны голсований и адресов, добавлен fab

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -109,4 +109,6 @@
 
     <color name="tutorial_background">#f2f2f2</color>
     <color name="tutorial_description">#96a5ab</color>
+
+    <color name="fab_house_polls_add_color">#da4336</color>
 </resources>
