--- a/app/src/main/res/layout/fragment_house_poll.xml
+++ b/app/src/main/res/layout/fragment_house_poll.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout style="@style/root">
 
@@ -28,6 +29,19 @@
                     android:id="@+id/list"
                     style="@style/root" />
             </android.support.v4.widget.SwipeRefreshLayout>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_add_house_poll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="50dp"
+                app:backgroundTint="@color/fab_house_polls_add_color"
+                app:borderWidth="0dp"
+                app:elevation="6dp"
+                app:fabSize="normal"
+                app:srcCompat="@drawable/fab_compat_src" />
         </RelativeLayout>
 
         <include layout="@layout/layout_internet_connection_lost" />
